style: prevent overflow so border radius are preserved

--- a/src/components/Autocomplete/styles.module.css
+++ b/src/components/Autocomplete/styles.module.css
@@ -29,6 +29,7 @@
   top: 100%;
   width: 100%;
   padding: 0;
+  overflow: hidden;
 }
 
 .autocompleteList li button {
